Fixing jumping div

--- a/app/assets/stylesheets/west_indies/west_indies.scss
+++ b/app/assets/stylesheets/west_indies/west_indies.scss
@@ -116,7 +116,7 @@ body{
 .document-thumbnail {
   float: left !important;
   height: 0;
-  margin: 0;
+  margin: 0 !important;
   padding: 0;
 }
 
